@@ -935,6 +935,20 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon PIXMA iP3600 */
+    "PIXMA iP3600", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    /* 8, */
+    &canon_PIXMA_iP3600_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_r|CANON_CAP_I|CANON_CAP_P,0x64,control_cmd_PIXMA_iP2700,  /*features */
+    &canon_MULTIPASS_MP540_modelist,
+    &canon_PIXMA_iP3600_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon PIXMA iP4000 */
     "PIXMA iP4000", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
